--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ homepage = "https://vector.dev"
 license = "MPL-2.0"
 readme = "README.md"
 publish = false
-default-run = "vector"
 autobenches = false # our benchmarks are not runnable on their own either way
 rust-version = "1.62.0"
 
@@ -73,6 +72,7 @@ depends = ""
 
 [workspace]
 members = [
+  "cmd/vector",
   ".",
   "lib/codecs",
   "lib/enrichment",
@@ -107,6 +107,7 @@ members = [
   "lib/datadog/search-syntax",
   "lib/datadog/filter",
 ]
+default-members = ["cmd/vector"]
 
 [dependencies]
 # Internal libs
@@ -511,7 +512,7 @@ sources-nginx_metrics = ["dep:nom"]
 sources-opentelemetry = ["sources-vector", "opentelemetry"]
 sources-postgresql_metrics = ["dep:postgres-openssl", "dep:tokio-postgres"]
 sources-prometheus = ["dep:prometheus-parser", "sinks-prometheus", "sources-http", "sources-utils-http"]
-sources-redis= ["dep:redis"]
+sources-redis = ["dep:redis"]
 sources-socket = ["listenfd", "tokio-util/net", "sources-utils-udp", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-unix"]
 sources-splunk_hec = ["sources-utils-tls", "dep:roaring"]
 sources-statsd = ["listenfd", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-udp", "sources-utils-unix", "tokio-util/net"]
