--- a/Cargo.toml
+++ b/Cargo.toml
@@ -640,6 +640,7 @@ sinks-logs = [
   "sinks-socket",
   "sinks-splunk_hec",
   "sinks-vector",
+  "sinks-vm_import",
   "sinks-websocket",
 ]
 sinks-metrics = [
@@ -696,6 +697,7 @@ sinks-splunk_hec = []
 sinks-statsd = ["sinks-utils-udp", "tokio-util/net"]
 sinks-utils-udp = []
 sinks-vector = ["sinks-utils-udp", "tonic", "protobuf-build"]
+sinks-vm_import = []
 sinks-websocket = ["tokio-tungstenite"]
 
 # Datadog integration
