--- a/Cargo.toml
+++ b/Cargo.toml
@@ -457,8 +457,8 @@ sources-logs = [
   "sources-splunk_hec",
   "sources-stdin",
   "sources-syslog",
+  "sources-topsql_pubsub",
   "sources-vector",
-  "sources-tidb_topsql",
 ]
 sources-metrics = [
   "sources-apache_metrics",
@@ -508,7 +508,7 @@ sources-splunk_hec = ["sources-utils-tls", "roaring"]
 sources-statsd = ["listenfd", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-udp", "sources-utils-unix", "tokio-util/net"]
 sources-stdin = ["tokio-util/io"]
 sources-syslog = ["listenfd", "tokio-util/net", "sources-utils-udp", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-unix", "codecs/syslog"]
-sources-tidb_topsql = ["h2", "prost-types", "protobuf-build", "tonic", "hex"]
+sources-topsql_pubsub = ["h2", "prost-types", "protobuf-build", "tonic", "hex"]
 sources-utils-http = ["snap", "sources-utils-tls", "sources-utils-http-auth", "sources-utils-http-encoding", "sources-utils-http-error", "sources-utils-http-prelude"]
 sources-utils-http-auth = ["sources-utils-http-error"]
 sources-utils-http-encoding = ["snap", "sources-utils-http-error"]
