--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,6 +139,7 @@ tokio-openssl = { version = "0.6.3", default-features = false }
 tokio-stream = { version = "0.1.9", default-features = false, features = ["net", "sync", "time"] }
 tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
 console-subscriber = { version = "0.1.6", default-features = false, optional = true }
+async-recursion = "1.0.0"
 
 # Tracing
 tracing = { version = "0.1.34", default-features = false }
