--- a/Cargo.toml
+++ b/Cargo.toml
@@ -214,6 +214,9 @@ datadog-search-syntax = { path = "lib/datadog/search-syntax" }
 hex = { version = "0.4.3", default-features = false, optional = true }
 sha2 = { version = "0.10.2", default-features = false, optional = true }
 
+# Top SQL
+etcd-client = { version = "0.10", features = ["tls-roots"], optional = true }
+
 # VRL Lang
 vrl = { path = "lib/vrl/vrl" }
 vrl-stdlib = { path = "lib/vrl/stdlib" }
@@ -519,7 +522,7 @@ sources-splunk_hec = ["sources-utils-tls", "dep:roaring"]
 sources-statsd = ["listenfd", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-udp", "sources-utils-unix", "tokio-util/net"]
 sources-stdin = ["tokio-util/io"]
 sources-syslog = ["listenfd", "tokio-util/net", "sources-utils-udp", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-unix", "codecs/syslog"]
-sources-topsql_pubsub = ["dep:prost-types", "protobuf-build", "dep:tonic", "dep:hex"]
+sources-topsql_pubsub = ["dep:prost-types", "protobuf-build", "dep:tonic", "dep:hex", "etcd-client"]
 sources-utils-http = ["dep:snap", "sources-utils-tls", "sources-utils-http-auth", "sources-utils-http-encoding", "sources-utils-http-error", "sources-utils-http-prelude"]
 sources-utils-http-auth = ["sources-utils-http-error"]
 sources-utils-http-encoding = ["dep:snap", "sources-utils-http-error"]
