--- a/Cargo.toml
+++ b/Cargo.toml
@@ -470,7 +470,7 @@ sources-logs = [
   "sources-splunk_hec",
   "sources-stdin",
   "sources-syslog",
-  "sources-topsql_pubsub",
+  "sources-topsql",
   "sources-vector",
 ]
 sources-metrics = [
@@ -522,7 +522,7 @@ sources-splunk_hec = ["sources-utils-tls", "dep:roaring"]
 sources-statsd = ["listenfd", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-udp", "sources-utils-unix", "tokio-util/net"]
 sources-stdin = ["tokio-util/io"]
 sources-syslog = ["listenfd", "tokio-util/net", "sources-utils-udp", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-unix", "codecs/syslog"]
-sources-topsql_pubsub = ["dep:prost-types", "protobuf-build", "dep:tonic", "dep:hex", "etcd-client"]
+sources-topsql = ["dep:prost-types", "protobuf-build", "dep:tonic", "dep:hex", "etcd-client"]
 sources-utils-http = ["dep:snap", "sources-utils-tls", "sources-utils-http-auth", "sources-utils-http-encoding", "sources-utils-http-error", "sources-utils-http-prelude"]
 sources-utils-http-auth = ["sources-utils-http-error"]
 sources-utils-http-encoding = ["dep:snap", "sources-utils-http-error"]
