--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,8 +73,9 @@ depends = ""
 
 [workspace]
 members = [
-  "cmd/vector-bin",
+  "cmd/vector",
   "extensions/topsql",
+  "extensions/vm_import",
   ".",
   "lib/codecs",
   "lib/enrichment",
@@ -109,7 +110,7 @@ members = [
   "lib/datadog/search-syntax",
   "lib/datadog/filter",
 ]
-default-members = ["cmd/vector-bin"]
+default-members = ["cmd/vector"]
 
 [dependencies]
 # Internal libs
@@ -514,7 +515,7 @@ sources-nginx_metrics = ["dep:nom"]
 sources-opentelemetry = ["sources-vector", "opentelemetry"]
 sources-postgresql_metrics = ["dep:postgres-openssl", "dep:tokio-postgres"]
 sources-prometheus = ["dep:prometheus-parser", "sinks-prometheus", "sources-http", "sources-utils-http"]
-sources-redis= ["dep:redis"]
+sources-redis = ["dep:redis"]
 sources-socket = ["listenfd", "tokio-util/net", "sources-utils-udp", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-unix"]
 sources-splunk_hec = ["sources-utils-tls", "dep:roaring"]
 sources-statsd = ["listenfd", "sources-utils-tcp-keepalive", "sources-utils-tcp-socket", "sources-utils-tls", "sources-utils-udp", "sources-utils-unix", "tokio-util/net"]
@@ -617,7 +618,6 @@ sinks-logs = [
   "sinks-socket",
   "sinks-splunk_hec",
   "sinks-vector",
-  "sinks-vm_import",
   "sinks-websocket",
 ]
 sinks-metrics = [
@@ -676,7 +676,6 @@ sinks-splunk_hec = []
 sinks-statsd = ["sinks-utils-udp", "tokio-util/net"]
 sinks-utils-udp = []
 sinks-vector = ["sinks-utils-udp", "dep:tonic", "protobuf-build"]
-sinks-vm_import = []
 sinks-websocket = ["dep:tokio-tungstenite"]
 
 # Datadog integration
