add topsql & vm-import
Signed-off-by: Zhenchi <zhongzc_arch@outlook.com>

--- a/cmd/vector/Cargo.toml
+++ b/cmd/vector/Cargo.toml
@@ -222,3 +222,7 @@ enrichment-tables-benches = ["vector/enrichment-tables-benches"]
 
 [dependencies]
 vector = { path = "../..", default-features = false }
+
+# Extensions
+topsql = { git = "https://github.com/tidbcloud/vector-extensions" }
+vm-import = { git = "https://github.com/tidbcloud/vector-extensions" }
